Lots of updates for deprecated methods and dependencies, client opens, testing Server/updating server needed