@@ -4,7 +4,7 @@ import de.mephisto.vpin.commons.utils.scripts.MacOS;
 import de.mephisto.vpin.restclient.util.FileUtils;
 import de.mephisto.vpin.restclient.util.OSUtil;
 import de.mephisto.vpin.restclient.util.SystemCommandExecutor;
-import edu.umd.cs.findbugs.annotations.Nullable;
+import org.jspecify.annotations.Nullable;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -14,6 +14,7 @@ import java.io.FileOutputStream;
 import java.io.IOException;
 import java.lang.invoke.MethodHandles;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.attribute.PosixFilePermission;
@@ -62,7 +63,7 @@ public class Updater {
       percentage = 99;
     }
 
-    LOG.info(tmp.getAbsolutePath() + " download at " + percentage + "%");
+    LOG.info("{} download at {}%", tmp.getAbsolutePath(), percentage);
     return percentage;
   }
 
@@ -72,8 +73,8 @@ public class Updater {
 
   public static void downloadAndOverwrite(String downloadUrl, File target, boolean overwrite) {
     try {
-      LOG.info("Downloading " + downloadUrl);
-      URL url = new URL(downloadUrl);
+      LOG.info("Downloading {}", downloadUrl);
+      URL url = URI.create(downloadUrl).toURL();
       HttpURLConnection connection = (HttpURLConnection) url.openConnection();
       connection.setReadTimeout(5000);
       connection.setDoOutput(true);
@@ -109,7 +110,7 @@ public class Updater {
       }
     }
     catch (Exception e) {
-      LOG.error("Updater Failed to execute download: " + e.getMessage(), e);
+      LOG.error("Updater Failed to execute download: {}", e.getMessage(), e);
     }
   }
 
@@ -137,7 +138,7 @@ public class Updater {
     if (OSUtil.isWindows()) {
       String cmds = "timeout /T 4 /nobreak\ncd /d %~dp0\nresources\\7z.exe -aoa x \"VPin-Studio.zip\"\ntimeout /T 4 /nobreak\ndel VPin-Studio.zip\nVPin-Studio.exe\nexit";
       FileUtils.writeBatch("update-client.bat", cmds);
-      LOG.info("Written temporary batch: " + cmds);
+      LOG.info("Written temporary batch: {}", cmds);
       List<String> commands = Arrays.asList("cmd", "/c", "start", "update-client.bat");
       SystemCommandExecutor executor = new SystemCommandExecutor(commands);
       executor.setDir(getWriteableBaseFolder());
@@ -156,14 +157,14 @@ public class Updater {
       try {
         String cmds = "#!/bin/bash\nsleep 4\nunzip -o vpin-studio-ui-jar.zip\nrm vpin-studio-ui-jar.zip\n./VPin-Studio.sh &";
         File file = FileUtils.writeBatch("update-client.sh", cmds);
-        LOG.info("Written temporary bash: " + cmds);
+        LOG.info("Written temporary bash: {}", cmds);
 
         Set<PosixFilePermission> perms = new HashSet<>();
         perms.add(PosixFilePermission.OWNER_READ);
         perms.add(PosixFilePermission.OWNER_WRITE);
         perms.add(PosixFilePermission.OWNER_EXECUTE);
         Files.setPosixFilePermissions(file.toPath(), perms);
-        LOG.info("Applied execute permissions to : " + file.getAbsolutePath());
+        LOG.info("Applied execute permissions to : {}", file.getAbsolutePath());
 
         List<String> commands = Arrays.asList("./update-client.sh");
         SystemCommandExecutor executor = new SystemCommandExecutor(commands, false);
@@ -182,7 +183,7 @@ public class Updater {
         }).start();
       }
       catch (Exception e) {
-        LOG.error("Failed to execute update: " + e.getMessage(), e);
+        LOG.error("Failed to execute update: {}", e.getMessage(), e);
       }
     }
     else if (OSUtil.isMac()) {
@@ -213,7 +214,7 @@ public class Updater {
 
   public static String checkForUpdate() {
     try {
-      URL obj = new URL(LATEST_RELEASE_URL);
+      URL obj = URI.create(LATEST_RELEASE_URL).toURL();
       HttpURLConnection conn = (HttpURLConnection) obj.openConnection();
       conn.setInstanceFollowRedirects(true);
       HttpURLConnection.setFollowRedirects(true);
@@ -229,7 +230,7 @@ public class Updater {
       return LATEST_VERSION;
     }
     catch (Exception e) {
-      LOG.error("Update check failed: " + e.getMessage());
+      LOG.error("Update check failed: {}", e.getMessage());
     }
     return null;
   }
@@ -259,7 +260,7 @@ public class Updater {
       return new File("./");
     }
     else {
-      LOG.info("Setting Base Path for Mac Download to -" + System.getProperty("MAC_WRITE_PATH"));
+      LOG.info("Setting Base Path for Mac Download to -{}", System.getProperty("MAC_WRITE_PATH"));
       return new File(System.getProperty("MAC_WRITE_PATH"));
     }
   }
