@@ -1,8 +1,9 @@
 package de.mephisto.vpin.restclient.mania;
 
-import com.fasterxml.jackson.databind.DeserializationFeature;
-import com.fasterxml.jackson.databind.ObjectMapper;
-import com.fasterxml.jackson.databind.SerializationFeature;
+import tools.jackson.databind.DeserializationFeature;
+import tools.jackson.databind.ObjectMapper;
+import tools.jackson.databind.SerializationFeature;
+import tools.jackson.databind.json.JsonMapper;
 import de.mephisto.vpin.restclient.client.VPinStudioClient;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -10,6 +11,7 @@ import org.slf4j.LoggerFactory;
 import java.io.*;
 import java.lang.invoke.MethodHandles;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 
 public class TarcisioWheelsDB {
@@ -19,9 +21,10 @@ public class TarcisioWheelsDB {
   private final static String WHEEL_DB = "https://www.vpin-mania.net/wheels/wheels.json";
 
   static {
-    objectMapper = new ObjectMapper();
-    objectMapper.enable(SerializationFeature.INDENT_OUTPUT);
-    objectMapper.configure(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES, false);
+    objectMapper = JsonMapper.builder()
+        .enable(SerializationFeature.INDENT_OUTPUT)
+        .disable(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES)
+        .build();
   }
 
   private static TarcisioWheels wheels = new TarcisioWheels();
@@ -37,8 +40,8 @@ public class TarcisioWheelsDB {
 
   private static void update() {
     try {
-      LOG.info("Downloading " + WHEEL_DB);
-      java.net.URL url = new URL(WHEEL_DB);
+      LOG.info("Downloading {}", WHEEL_DB);
+      URL url = URI.create(WHEEL_DB).toURL();
       HttpURLConnection connection = (HttpURLConnection) url.openConnection();
       connection.setDoOutput(true);
       BufferedInputStream in = new BufferedInputStream(url.openStream());
@@ -50,11 +53,11 @@ public class TarcisioWheelsDB {
       in.close();
       fileOutputStream.close();
       LOG.info("Written {}", tmp.getAbsolutePath());
-      LOG.info("Tarcisio wheel database loaded with " + wheels.getData().size() + " images.");
+      LOG.info("Tarcisio wheel database loaded with {} images.", wheels.getData().size());
       tmp.delete();
     }
     catch (IOException e) {
-      LOG.error("Wheel database download failed: " + e.getMessage());
+      LOG.error("Wheel database download failed: {}", e.getMessage());
     }
   }
 
